infrastructure/builder/test/formats/example/deploy.yml
---
resources:
- name: ping-web-deployment
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: blah blah
