infrastructure/builder/test/formats/example/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: taskcluster-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: something
    hosts:
      - something.com
  rules:
  - host: something.com
    http:
      paths:
      - path: /ping/*
        backend:
          serviceName: ping
          servicePort: 80
